--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -9,7 +9,8 @@ $line-height-base: 1.6;
 
 // Colors
 
-$primary: #0074D9;
+$primary: #c0c0c0;
+$secondary: #aa1916;
 $blue: #3490dc;
 $indigo: #6574cd;
 $purple: #9561e2;
@@ -34,6 +35,15 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+.carousel-inner > .carousel-item > img {
+  width: 100%;
+  height: 100%;
+}
+
+.card {
+  background-color: rgba(245, 245, 245, 0.4);
 }
 
 .nav a {
